# kedro-ml-cookie

./: CLAUDE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/conf/base/: globals.yml  logging.yml  mlflow.yml
{{cookiecutter.repo_name}}/conf/base/catalog/modelling/california/: hypertune.yml  preprocessing.yml  reporting.yml
{{cookiecutter.repo_name}}/conf/base/catalog/modelling/titanic/: hypertune.yml  preprocessing.yml  reporting.yml
{{cookiecutter.repo_name}}/conf/base/parameters/modelling/california/: data_processing.yml  hypertune.yml
{{cookiecutter.repo_name}}/conf/base/parameters/modelling/titanic/: data_processing.yml  hypertune.yml
{{cookiecutter.repo_name}}/notebooks/: 01_explore_raw_data.ipynb
{{cookiecutter.repo_name}}/src/modelling/: __main__.py  hooks.py  pipeline_registry.py  settings.py
{{cookiecutter.repo_name}}/src/modelling/california/: pipeline_registry.py
{{cookiecutter.repo_name}}/src/modelling/california/hypertune/: nodes.py  pipeline.py
{{cookiecutter.repo_name}}/src/modelling/california/preprocessing/: pipeline.py
{{cookiecutter.repo_name}}/src/modelling/california/reporting/: nodes.py  pipeline.py
{{cookiecutter.repo_name}}/src/modelling/titanic/: pipeline_registry.py
{{cookiecutter.repo_name}}/src/modelling/titanic/hypertune/: nodes.py  pipeline.py
{{cookiecutter.repo_name}}/src/modelling/titanic/preprocessing/: nodes.py  pipeline.py
{{cookiecutter.repo_name}}/src/modelling/titanic/reporting/: nodes.py  pipeline.py
{{cookiecutter.repo_name}}/tests/: test_data_processing.py  test_html_report.py  test_metrics.py  test_object_injection.py  test_reporting.py
